--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -92,3 +92,42 @@ img {
         letter-spacing: -0.03em;
     }
 }
+
+.text-row {
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    margin-bottom: 60px;
+
+    /* .text-row__title */
+    &--reverce {
+        flex-direction: row-reverse;
+    }
+
+    &__title {
+        max-width: 392px;
+        position: relative;
+
+        &::before {
+            content: "";
+
+            position: absolute;
+            right: 60px;
+            top: 20px;
+            z-index: -5;
+
+            width: 140px;
+            height: 140px;
+
+            border-radius: 100%;
+            background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+            filter: blur(90px);
+        }
+    }
+
+    /* .text-row__text */
+
+    &__text {
+        max-width: 444px;
+    }
+}
