--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,37 @@ img {
   letter-spacing: -0.03em;
 }
 
+.text-row {
+  display: flex;
+  align-items: center;
+  gap: 70px;
+  margin-bottom: 60px;
+  /* .text-row__title */
+  /* .text-row__text */
+}
+.text-row--reverce {
+  flex-direction: row-reverse;
+}
+.text-row__title {
+  max-width: 392px;
+  position: relative;
+}
+.text-row__title::before {
+  content: "";
+  position: absolute;
+  right: 60px;
+  top: 20px;
+  z-index: -5;
+  width: 140px;
+  height: 140px;
+  border-radius: 100%;
+  background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+  filter: blur(90px);
+}
+.text-row__text {
+  max-width: 444px;
+}
+
 .header {
   padding: 50px 0;
   /* .header__container */
@@ -403,31 +434,6 @@ img {
   /* .products__cards */
   /* .products__card */
 }
-.products__desc {
-  display: flex;
-  align-items: center;
-  gap: 70px;
-  margin-bottom: 60px;
-}
-.products__title {
-  max-width: 392px;
-  position: relative;
-}
-.products__title::before {
-  content: "";
-  position: absolute;
-  right: 60px;
-  top: 20px;
-  z-index: -5;
-  width: 140px;
-  height: 140px;
-  border-radius: 100%;
-  background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
-  filter: blur(90px);
-}
-.products__text {
-  max-width: 444px;
-}
 .products__cards {
   display: flex;
   gap: 30px;
@@ -511,4 +517,101 @@ img {
   font-size: 17px;
   padding: 15px 0px;
   width: 100%;
+}
+
+.events {
+  margin-top: 100px;
+  /* .events__container */
+  /* .events__desc */
+  /* .events__title */
+  /* .events__text */
+  /* .events__inner-wrapper */
+}
+.events__text {
+  max-width: 455px;
+}
+.events__inner-wrapper {
+  display: grid;
+  gap: 25px;
+  grid-auto-rows: 260px;
+  grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
+  grid-template-areas: "price price kitchen kitchen" "free social social choose";
+  position: relative;
+}
+.events__inner-wrapper::before {
+  content: "";
+  width: 860px;
+  height: 620px;
+  position: absolute;
+  top: -410px;
+  left: -610px;
+  z-index: -10;
+  background-image: url(../images/icons/lines.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: rotate(410deg);
+}
+.events__inner-wrapper::after {
+  content: "";
+  position: absolute;
+  bottom: -50px;
+  right: 50%;
+  z-index: -5;
+  width: 320px;
+  height: 270px;
+  border-radius: 100%;
+  background-color: rgba(217, 217, 217, 0.2);
+  filter: blur(100px);
+}
+
+.event {
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 30px;
+  padding: 45px 30px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* .event__title */
+  /* .event__btn */
+}
+.event__title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 109%;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+  width: 294px;
+}
+.event__btn {
+  padding: 20px 50px;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.event--price {
+  background-image: url(../images/events/1.png);
+  grid-area: price;
+}
+
+.event--kitchen {
+  background-image: url(../images/events/2.png);
+  grid-area: kitchen;
+}
+
+.event--free {
+  background-image: url(../images/events/3.png);
+  grid-area: free;
+}
+
+.event--social {
+  background-image: url(../images/events/4.png);
+  grid-area: social;
+}
+
+.event--choose {
+  background-image: url(../images/events/5.png);
+  grid-area: choose;
 }/*# sourceMappingURL=style.css.map */
