--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -210,8 +211,17 @@ img {
 }
 .welcome__img {
   max-width: 470px;
+  animation: moveCup 1.5s infinite alternate ease-in-out;
 }
 
+@keyframes moveCup {
+  0% {
+    transform: none;
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
 .stats {
   display: flex;
   gap: 45px;
@@ -614,4 +624,185 @@ img {
 .event--choose {
   background-image: url(../images/events/5.png);
   grid-area: choose;
+}
+
+.contacts {
+  padding-top: 130px;
+  padding-bottom: 100px;
+  overflow: hidden;
+  /* .contacts__container */
+  /* .contacts__desc */
+  /* .contacts__title */
+  /* .contacts__text */
+  /* .contacts__phone */
+  /* .contacts__img-wrapper */
+  /* .contacts__inner-wrapper */
+  /* .contacts__img */
+}
+.contacts__container {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__desc {
+  width: 390px;
+}
+.contacts__title {
+  margin-bottom: 50px;
+}
+.contacts__text {
+  margin-bottom: 50px;
+  position: relative;
+}
+.contacts__text::before {
+  content: "";
+  position: absolute;
+  left: 80px;
+  top: 20px;
+  z-index: -5;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+  filter: blur(90px);
+}
+.contacts__phone {
+  font-weight: 500;
+  font-size: 32px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+.contacts__phone::before {
+  content: "";
+  width: 45px;
+  height: 45px;
+  background: url(../images/icons/phone.png);
+  background-size: contain;
+  background-position: center;
+}
+.contacts__img-wrapper {
+  position: relative;
+}
+.contacts__img-wrapper::before {
+  content: "";
+  position: absolute;
+  left: -50px;
+  top: 30px;
+  z-index: -5;
+  width: 120px;
+  height: 120px;
+  border-radius: 100%;
+  background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+  filter: blur(90px);
+}
+.contacts__img-wrapper::after {
+  content: "";
+  width: 920px;
+  height: 670px;
+  position: absolute;
+  right: -245px;
+  bottom: -360px;
+  z-index: -15;
+  background-image: url(../images/icons/lines.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: rotate(17deg);
+}
+.contacts__inner-wrapper {
+  position: relative;
+  padding-right: 35px;
+}
+.contacts__inner-wrapper::before {
+  content: "";
+  width: calc(100% - 35px);
+  height: 100%;
+  position: absolute;
+  bottom: -25px;
+  right: 0;
+  z-index: -10;
+  -webkit-clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
+          clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
+  background: #237249;
+}
+.contacts__inner-wrapper::after {
+  content: "we\ahave";
+  white-space: pre-wrap;
+  position: absolute;
+  top: 55px;
+  left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  width: 250px;
+  height: 250px;
+  font-weight: 500;
+  font-size: 38px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  transform: translate(-50%, -50%);
+  background-image: url(../images/icons/star.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.contacts__img {
+  width: 353px;
+  -webkit-clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
+          clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
+}
+
+.footer {
+  padding: 40px 0;
+  background-color: #0b0c0d;
+  /* .footer__container */
+  /* .footer__row */
+  /* .footer__logo */
+  /* .footer__nav */
+  /* .footer__nav-col */
+  /* .footer__nav-link */
+  /* .footer__up-link */
+  /* .footer__arrow */
+  /* .footer__phone */
+}
+.footer__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 85px;
+}
+.footer__nav {
+  display: flex;
+  gap: 80px;
+}
+.footer__nav-col {
+  display: flex;
+  flex-direction: column;
+}
+.footer__nav-link {
+  letter-spacing: -0.01em;
+  color: rgba(187, 179, 179, 0.43);
+}
+.footer__nav-link:first-child {
+  color: #bbb3b3;
+}
+.footer__up-link {
+  width: 85px;
+  height: 85px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  border: 1.5px solid transparent;
+  background: linear-gradient(#0b0c0d, #0b0c0d) padding-box, linear-gradient(-30deg, #237249, #35C66B) border-box;
+}
+.footer__arrow {
+  height: 35px;
+}
+.footer__phone {
+  font-weight: 500;
+  font-size: 26px;
 }/*# sourceMappingURL=style.css.map */
