--- a/style.scss
+++ b/style.scss
@@ -6,3 +6,5 @@
 @import "./sass/history";
 @import "./sass/products";
 @import "./sass/evens";
+@import "./sass/contacts";
+@import "./sass/footer";
