--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -98,6 +98,17 @@
 
     &__img {
         max-width: 470px;
+        animation: moveCup 1.5s infinite alternate ease-in-out;
+    }
+}
+
+@keyframes moveCup {
+    0% {
+        transform: none;
+    }
+
+    100% {
+        transform: translateY(-20px);
     }
 }
 
