--- a/sass/_evens.scss
+++ b/sass/_evens.scss
@@ -29,6 +29,13 @@
             "free social social choose";
         position: relative;
 
+        @media(max-width: 1192px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: "price price"
+                "free social"
+                "kitchen choose";
+        }
+
         &::before {
             content: "";
             width: 860px;
@@ -42,6 +49,10 @@
             background-position: center;
             background-repeat: no-repeat;
             transform: rotate(410deg);
+
+            @media (max-width: 992px) {
+                display: none;
+            }
         }
 
         &::after {
